--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -5,33 +5,51 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-linux:
-    name: Build on self-hosted Linux runner
-    runs-on: [self-hosted, linux-build]
+    name: Build on Linux
+    # For initial testing use GitHub-hosted runner:
+    runs-on: ubuntu-latest
+    # When you have registered self-hosted runners, switch to:
+    # runs-on: [self-hosted, linux-build]
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - name: Set up docker buildx
+
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Build sample image
         run: |
           docker build -t myorg/sample-app:ci-${{ github.run_id }} ./exercises/02-containerize-app/app
-      - name: Upload artifact
+
+      - name: Upload linux artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-image-tag
+          name: linux-app-source
           path: ./exercises/02-containerize-app/app
 
   build-windows:
-    name: Build on self-hosted Windows runner
-    runs-on: [self-hosted, windows-build]
+    name: Build on Windows
+    # For initial testing use GitHub-hosted runner:
+    runs-on: windows-latest
+    # When you have registered self-hosted Windows runners, switch to:
+    # runs-on: [self-hosted, windows-build]
+    timeout-minutes: 60
     steps:
       - uses: actions/checkout@v4
-      - name: Build artifact (example)
-        run: echo "Windows build step placeholder"
-      - name: Ensure artifact folder
-        run: mkdir -p ./artifacts/windows
-      - name: Upload artifact
+
+      - name: Windows build placeholder
+        shell: pwsh
+        run: |
+          Write-Host "Windows build step (placeholder)"
+          New-Item -ItemType Directory -Force -Path .\artifacts\windows
+
+      - name: Upload windows artifact
         uses: actions/upload-artifact@v4
         with:
           name: windows-artifact
@@ -43,9 +61,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Retrieve artifacts
+
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: ./artifacts
+
       - name: Publish placeholder
-        run: echo "Publish step (register in registry or release)"
+        run: echo "Publish step (push to GHCR / Docker Hub or create release)"
