Update Dockerfile to inject BUILD_ID into index.html
- Added ARG BUILD_ID to Dockerfile to receive the GitHub Actions run ID.
- Copy index.html into the Nginx container and replace {{BUILD_ID}} with the actual run ID.
- Ensures each container build is traceable back to the specific CI pipeline run.
- Enhances sample app visibility by embedding the build number into the served HTML.

--- a/exercises/02-containerize-app/app/Dockerfile
+++ b/exercises/02-containerize-app/app/Dockerfile
@@ -1,3 +1,11 @@
 # Minimal web sample for CI demo
 FROM nginx:stable-alpine
+
+# Accept BUILD_ID from the workflow
+ARG BUILD_ID
+
+# Copy static HTML into nginx default path
 COPY index.html /usr/share/nginx/html/index.html
+
+# Replace placeholder {{BUILD_ID}} with actual build id
+RUN sed -i "s/{{BUILD_ID}}/${BUILD_ID}/g" /usr/share/nginx/html/index.html
