ci: fix Docker build step formatting in workflow
Corrected line continuation and indentation in ci-pipeline.yml
so the `docker build` command parses properly in GitHub Actions.
This ensures BUILD_ID is passed as an argument and tagged images
use the run_id without YAML errors.

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -25,7 +25,8 @@ jobs:
         
 - name: Build sample image
   run: |
-    docker build --build-arg BUILD_ID=${{ github.run_id }} \
+    docker build \
+      --build-arg BUILD_ID=${{ github.run_id }} \
       -t myorg/sample-app:ci-${{ github.run_id }} \
       ./exercises/02-containerize-app/app
 
